elser to use API rather than UI to load and deploy elser

--- a/notebooks/search/03-ELSER.ipynb
+++ b/notebooks/search/03-ELSER.ipynb
@@ -53,39 +53,10 @@
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {
-    "id": "nSw1R8e28F_E"
-   },
-   "source": [
-    "# Setup ELSER\n",
-    "To use ELSER, you must have the [appropriate subscription]() level\n",
-    "for semantic search or the trial period activated.\n",
-    "\n",
-    "Follow these [instructions](https://www.elastic.co/guide/en/machine-learning/8.8/ml-nlp-elser.html#trained-model) to download and deploy ELSER in the Kibana UI or using the Dev Tools **Console**.\n",
-    "\n",
-    "(Console commands in comments 👇)\n",
-    "<!-- # download elser model\n",
-    "\n",
-    "```json\n",
-    "PUT _ml/trained_models/.elser_model_1\n",
-    "{\n",
-    "  \"input\": {\n",
-    "\t\"field_names\": [\"text_field\"]\n",
-    "  }\n",
-    "}\n",
-    "``` -->\n",
-    "<!-- # deploy model\n",
-    "```json\n",
-    "POST _ml/trained_models/.elser_model_1/deployment/_start?deployment_id=for_search -->"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
     "id": "gaTFHLJC-Mgi"
    },
    "source": [
-    "# Install packages and connect with Elasticsearch Client\n",
+    "# Install and Connect\n",
     "\n",
     "To get started, we'll need to connect to our Elastic deployment using the Python client.\n",
     "Because we're using an Elastic Cloud deployment, we'll use the **Cloud ID** to identify our deployment.\n",
@@ -97,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -105,9 +76,19 @@
     "id": "K9Q1p2C9-wce",
     "outputId": "204d5aee-571e-4363-be6e-f87d058f2d29"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.2.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
-    "!pip install elasticsearch"
+    "!pip install -q elasticsearch"
    ]
   },
   {
@@ -123,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "id": "uP_GTVRi-d96"
    },
@@ -150,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -185,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -193,7 +174,15 @@
     "id": "rdiUKqZbEKfF",
     "outputId": "43b6f1cd-a43e-4dbe-caa5-7fd170464881"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'instance-0000000000', 'cluster_name': '96f39514682c4f9a8dcdf46927f22675', 'cluster_uuid': 'jFtkpt2CSYyfYgxa_G4bTA', 'version': {'number': '8.10.3', 'build_flavor': 'default', 'build_type': 'docker', 'build_hash': 'c63272efed16b5a1c25f3ce500715b7fddf9a9fb', 'build_date': '2023-10-05T10:15:55.152563867Z', 'build_snapshot': False, 'lucene_version': '9.7.0', 'minimum_wire_compatibility_version': '7.17.0', 'minimum_index_compatibility_version': '7.0.0'}, 'tagline': 'You Know, for Search'}\n"
+     ]
+    }
+   ],
    "source": [
     "print(client.info())"
    ]
@@ -211,6 +200,100 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Download and Deploy ELSER Model\n",
+    "In this example, we are going to download and deploy the ELSER model in our ML node. Make sure the ML node has at least 4GB of RAM in order to run the ELSER model. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creates the ELSER model configuration. Automatically downloads the model if it doesn't exist.\n",
+    "client.ml.put_trained_model(\n",
+    "  model_id=\".elser_model_1\",\n",
+    "  input={\n",
+    "    \"field_names\": [\"text_field\"]\n",
+    "  }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The above command will download the ELSER model. This will take a few minutes to complete. Use the following command to check the status of the model download."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ELSER Model is downloaded and ready to be deployed.\n"
+     ]
+    }
+   ],
+   "source": [
+    "status = client.ml.get_trained_models(\n",
+    "  model_id=\".elser_model_1\",\n",
+    "  include=\"definition_status\"\n",
+    ")\n",
+    "\n",
+    "if (status[\"trained_model_configs\"][0][\"fully_defined\"]):\n",
+    "  print(\"ELSER Model is downloaded and ready to be deployed.\")\n",
+    "else:\n",
+    "  print(\"ELSER Model is downloaded but not ready to be deployed.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once the model is downloaded, we can deploy the model in our ML node. Use the following command to deploy the model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ObjectApiResponse({'assignment': {'task_parameters': {'model_id': '.elser_model_1', 'deployment_id': '.elser_model_1', 'model_bytes': 438123276, 'threads_per_allocation': 1, 'number_of_allocations': 1, 'queue_capacity': 1024, 'cache_size': '438123276b', 'priority': 'normal'}, 'routing_table': {}, 'assignment_state': 'starting', 'reason': 'No ML nodes exist in the cluster', 'start_time': '2023-10-12T14:54:06.791927455Z', 'max_assigned_allocations': 0}})"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Start trained model deployment\n",
+    "client.ml.start_trained_model_deployment(\n",
+    "  model_id=\".elser_model_1\",\n",
+    "  number_of_allocations=1,\n",
+    "  \n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This also will take a few minutes to complete."
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {
@@ -225,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -233,7 +316,18 @@
     "id": "XhRng99KLQsd",
     "outputId": "00ea73b5-45a4-472b-f4bc-2c2c790ab94d"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ObjectApiResponse({'acknowledged': True})"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "client.ingest.put_pipeline(\n",
@@ -281,7 +375,7 @@
     "id": "TF_wxIAhD07a"
    },
    "source": [
-    "## Create index with mappings\n",
+    "## Create index\n",
     "\n",
     "To use the ELSER model at index time, we'll need to create an index mapping that supports a [`text_expansion`](https://www.elastic.co/guide/en/elasticsearch/reference/current/query-dsl-text-expansion-query.html) query.\n",
     "The mapping must include a field of type [`rank_features`](https://www.elastic.co/guide/en/elasticsearch/reference/current/rank-features.html) to work with our feature vectors of interest.\n",
@@ -292,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -300,7 +394,18 @@
     "id": "cvYECABJJs_2",
     "outputId": "18fb51e4-c4f6-4d1b-cb2d-bc6f8ec1aa84"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ObjectApiResponse({'acknowledged': True, 'shards_acknowledged': True, 'index': 'elser-example-movies'})"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "client.indices.create(\n",
     "  index=\"elser-example-movies\",\n",
@@ -322,9 +427,9 @@
     "          }\n",
     "        }\n",
     "      },\n",
-    "      \"ml.tokens\": {\n",
-    "        \"type\": \"rank_features\"\n",
-    "      },\n",
+    "      \"ml.tokens\": { \n",
+    "        \"type\": \"rank_features\" \n",
+    "      }\n",
     "    }\n",
     "  }\n",
     ")"
@@ -338,12 +443,14 @@
    },
    "source": [
     "## Insert Documents\n",
-    "Let's insert our example dataset of 12 movies."
+    "Let's insert our example dataset of 12 movies.\n",
+    "\n",
+    "If you get an error, check the model has been deployed and is available in the ML node. In newer versions of Elastic Cloud, ML node is autoscaled and the ML node may not be ready yet. Wait for a few minutes and try again."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -351,7 +458,15 @@
     "id": "IBfqgdAcuKRG",
     "outputId": "3b86daa1-ade1-4ff3-da81-4207fa814d30"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done indexing documents into `search-movies` index!\n"
+     ]
+    }
+   ],
    "source": [
     "url = \"https://raw.githubusercontent.com/elastic/elasticsearch-labs/main/notebooks/search/movies.json\"\n",
     "response = urlopen(url)\n",
@@ -395,14 +510,14 @@
     "id": "Zy5GT2xb38oz"
    },
    "source": [
-    "# Querying Documents with ELSER\n",
+    "# Searching Documents\n",
     "\n",
     "Let's test out semantic search using ELSER."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -410,7 +525,26 @@
     "id": "bAZRxja-5Q6X",
     "outputId": "37a26a2c-4284-4e51-c34e-9a55edf77cb8"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Score: 7.934606\n",
+      "Title: Fight Club\n",
+      "Plot: An insomniac office worker and a devil-may-care soapmaker form an underground fight club that evolves into something much, much more.\n",
+      "\n",
+      "Score: 6.172357\n",
+      "Title: Pulp Fiction\n",
+      "Plot: The lives of two mob hitmen, a boxer, a gangster and his wife, and a pair of diner bandits intertwine in four tales of violence and redemption.\n",
+      "\n",
+      "Score: 4.646809\n",
+      "Title: Se7en\n",
+      "Plot: Two detectives, a rookie and a veteran, hunt a serial killer who uses the seven deadly sins as his motives.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "response = client.search(\n",
     "    index='elser-example-movies', \n",
@@ -419,7 +553,7 @@
     "        \"text_expansion\": {\n",
     "            \"ml.tokens\": {\n",
     "                \"model_id\":\".elser_model_1\",\n",
-    "                \"model_text\":\"child toy\"\n",
+    "                \"model_text\":\"fighting movie\"\n",
     "            }\n",
     "        }\n",
     "    }\n",
@@ -453,7 +587,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.3"
   },
   "vscode": {
    "interpreter": {
