--- a/notebooks/search/03-ELSER.ipynb
+++ b/notebooks/search/03-ELSER.ipynb
@@ -19,40 +19,6 @@
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {
-    "id": "Y01AXpELkygt"
-   },
-   "source": [
-    "# 🧰 Requirements\n",
-    "\n",
-    "For this example, you will need:\n",
-    "\n",
-    "- An Elastic deployment with minimum **4GB machine learning node**\n",
-    "   - We'll be using [Elastic Cloud](https://www.elastic.co/guide/en/cloud/current/ec-getting-started.html) for this example (available with a [free trial](   https://cloud.elastic.co/registration?utm_source=github&utm_content=elasticsearch-labs-notebook))\n",
-    "\n",
-    "   \n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "N4pI1-eIvWrI"
-   },
-   "source": [
-    "# Create Elastic Cloud deployment\n",
-    "\n",
-    "If you don't have an Elastic Cloud deployment, sign up [here](https://cloud.elastic.co/registration?utm_source=github&utm_content=elasticsearch-labs-notebook) for a free trial.\n",
-    "\n",
-    "- Go to the [Create deployment](https://cloud.elastic.co/deployments/create) page\n",
-    "   - Under **Advanced settings**, go to **Machine Learning instances**\n",
-    "   - You'll need at least **4GB** RAM per zone for this tutorial\n",
-    "   - Select **Create deployment**"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
     "id": "gaTFHLJC-Mgi"
    },
    "source": [
@@ -68,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 90,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -204,7 +170,7 @@
    "metadata": {},
    "source": [
     "# Download and Deploy ELSER Model\n",
-    "In this example, we are going to download and deploy the ELSER model in our ML node. Make sure the ML node has at least 4GB of RAM in order to run the ELSER model. "
+    "In this example, we are going to download and deploy the ELSER model in our ML node. Make sure you have an ML node in order to run the ELSER model. "
    ]
   },
   {
