replace reindex api with elasticsearch helper api

--- a/notebooks/search/06-upgrading-index-elser.ipynb
+++ b/notebooks/search/06-upgrading-index-elser.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/elastic/elasticsearch-labs/blob/main/notebooks/06-upgrading-index-elser.ipynb)\n",
     "\n",
-    "Elasticsearch [Reindex API](https://www.elastic.co/guide/en/elasticsearch/reference/current/docs-reindex.html) can be used when you want to move data from one index to another, update or change mapping of the index or even update data of your index. \n",
+    "Elasticsearch [Reindex API](https://elasticsearch-py.readthedocs.io/en/stable/api.html#elasticsearch.Elasticsearch.reindex) can be used when you want to move data from one index to another, update or change mapping of the index or even update data of your index. \n",
     "\n",
     "In this workbook we will see example on how to migrate your index to use ELSER model using [Reindex API with ingestion pipeline](https://www.elastic.co/guide/en/elasticsearch/reference/current/docs-reindex.html#reindex-with-an-ingest-pipeline). \n",
     "\n",
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,43 +323,21 @@
    "source": [
     "# Reindex with updated pipeline \n",
     "\n",
-    "With the help of [Reindex API](https://www.elastic.co/guide/en/elasticsearch/reference/current/docs-reindex.html), we can copy data from old index `movies` and to new index `elser-movies` with  ingestion pipeline set to `elser-ingest-pipeline` .  On success, the index `elser-movies` creates tokens on the `text_expansion` terms that you targeted for ELSER inference.\n",
-    "\n",
-    "Copy and paste following command in your dev console. \n",
-    "\n",
-    "```\n",
-    "POST _reindex?wait_for_completion=false\n",
-    "{\n",
-    "  \"source\": {\n",
+    "With the help of [Reindex API](https://elasticsearch-py.readthedocs.io/en/stable/api.html#elasticsearch.Elasticsearch.reindex), we can copy data from old index `movies` and to new index `elser-movies` with  ingestion pipeline set to `elser-ingest-pipeline` .  On success, the index `elser-movies` creates tokens on the `text_expansion` terms that you targeted for ELSER inference."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.reindex(source={\n",
     "    \"index\": \"movies\"\n",
-    "  },\n",
-    "  \"dest\": {\n",
+    "  }, dest={\n",
     "    \"index\": \"elser-movies\",\n",
     "    \"pipeline\":  \"elser-ingest-pipeline\"\n",
-    "  }\n",
-    "}\n",
-    "\n",
-    "\n",
-    "```\n",
-    "\n",
-    "When you execute the above command with `wait_for_completion=false` you will see the response :\n",
-    "\n",
-    "```\n",
-    "{\n",
-    "  \"task\": \"pT5PY9_sQvyqDtaIBiHbYg:218353\"\n",
-    "}\n",
-    "\n",
-    "```\n",
-    "\n",
-    "Use the above task id to check the status of the your reindex API in [Task management API](https://www.elastic.co/guide/en/elasticsearch/reference/current/tasks.html)  in dev console\n",
-    "\n",
-    "```\n",
-    "\n",
-    "GET _tasks/pT5PY9_sQvyqDtaIBiHbYg:218353\n",
-    "\n",
-    "```\n",
-    "\n",
-    "For more information on troubleshooting Reindex API checkout this [blog](https://www.elastic.co/blog/3-best-practices-for-using-and-troubleshooting-the-reindex-api) post"
+    "  })"
    ]
   },
   {
@@ -382,24 +360,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score: 3.3168378\n",
-      "Title: fight club\n",
-      "Plot: An insomniac office worker and a devil-may-care soapmaker form an underground fight club that evolves into something much, much more.\n",
+      "Score: 6.403748\n",
+      "Title: se7en\n",
+      "Plot: Two detectives, a rookie and a veteran, hunt a serial killer who uses the seven deadly sins as his motives.\n",
       "\n",
-      "Score: 1.5777297\n",
-      "Title: the godfather\n",
-      "Plot: An organized crime dynasty's aging patriarch transfers control of his clandestine empire to his reluctant son.\n",
+      "Score: 3.6703482\n",
+      "Title: the departed\n",
+      "Plot: An undercover cop and a mole in the police attempt to identify each other while infiltrating an Irish gang in South Boston.\n",
       "\n",
-      "Score: 1.1162646\n",
-      "Title: the matrix\n",
-      "Plot: A computer hacker learns from mysterious rebels about the true nature of his reality and his role in the war against its controllers.\n",
+      "Score: 2.9359207\n",
+      "Title: the usual suspects\n",
+      "Plot: A sole survivor tells of the twisty events leading up to a horrific gun battle on a boat, which began when five criminals met at a seemingly random police lineup.\n",
       "\n"
      ]
     }
@@ -412,7 +390,7 @@
     "        \"text_expansion\": {\n",
     "            \"ml.tokens\": {\n",
     "                \"model_id\":\".elser_model_2\",\n",
-    "                \"model_text\":\"child toy\"\n",
+    "                \"model_text\":\"investigation\"\n",
     "            }\n",
     "        }\n",
     "    }\n",
@@ -514,40 +492,41 @@
    "metadata": {},
    "source": [
     "# Use Reindex API\n",
-    "we will use [Reindex API](https://www.elastic.co/guide/en/elasticsearch/reference/current/docs-reindex.html) to move data from old index to new index `elser-upgrade-index-demo`. Copy and run below code in your **dev console**\n",
+    "we will use [Reindex API](https://elasticsearch-py.readthedocs.io/en/stable/api.html#elasticsearch.Elasticsearch.reindex) to move data from old index to new index `elser-upgrade-index-demo`. We will be excluding target field `ml` from old index and instead generate new `ml` tokens with `.elser_model_2` while reindexing. \n",
     "\n",
-    "Note that we are excluding target field `ml` from old index.\n",
-    "\n",
-    "```\n",
-    "POST _reindex?wait_for_completion=false\n",
-    "{\n",
-    "  \"source\": {\n",
-    "    \"index\": \"my-old-elser-model-index\",\n",
+    "**`Note:`** Make sure to replace `my-index` with your index name that you intend to upgrade.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.reindex(source={\n",
+    "    \"index\": \"my-index\", # replace with your index name\n",
     "    \"_source\": {\n",
     "      \"excludes\": [\"ml\"]\n",
-    "    }\n",
-    "  },\n",
-    "  \"dest\": {\n",
+    "    }}, \n",
+    "    dest={\n",
     "    \"index\": \"elser-upgrade-index-demo\",\n",
     "    \"pipeline\":  \"elser-pipeline-upgrade-demo\"\n",
-    "  }\n",
-    "}\n",
-    "\n",
-    "\n",
-    "```\n",
-    "Once your reindexing is complete, you are ready to query on your data and perform semantic search "
+    "  })"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Querying your data"
+    "# Querying your data\n",
+    "\n",
+    "Once reindexing is complete, you are ready to query on your data and perform semantic search "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -682,9 +661,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ObjectApiResponse({'acknowledged': True, 'shards_acknowledged': True, 'index': 'elser-blogs'})"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "client.indices.create(\n",
     "  index=\"elser-blogs\",\n",
@@ -712,28 +702,25 @@
    "metadata": {},
    "source": [
     "# Reindex API\n",
-    "we will use the Reindex API to copy data and generate `text_expansion` embedding to our new index `elser-blogs`\n",
     "\n",
-    "Copy and run below code in your dev console\n",
-    "\n",
-    "```\n",
-    "POST _reindex?wait_for_completion=false\n",
-    "{\n",
-    "  \"source\": {\n",
+    "we will use the [Reindex API](https://elasticsearch-py.readthedocs.io/en/stable/api.html#elasticsearch.Elasticsearch.reindex) to copy data and generate `text_expansion` embedding to our new index `elser-blogs`. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.reindex(source={\n",
     "    \"index\": \"blogs\",\n",
     "    \"_source\": {\n",
     "      \"excludes\": [\"text_embedding\"]\n",
     "    }\n",
-    "  },\n",
-    "  \"dest\": {\n",
+    "  }, dest={\n",
     "    \"index\": \"elser-blogs\",\n",
     "    \"pipeline\":  \"elser-pipeline-blogs\"\n",
-    "  }\n",
-    "}\n",
-    "\n",
-    "```\n",
-    "\n",
-    "Confirm that the task is complete by check the status using the [Task management API](https://www.elastic.co/guide/en/elasticsearch/reference/current/tasks.html)  in dev console\n"
+    "  })"
    ]
   },
   {
@@ -746,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +757,7 @@
     "        \"text_expansion\": {\n",
     "            \"ml.tokens\": {\n",
     "                \"model_id\":\".elser_model_2\",\n",
-    "                \"model_text\":\"track network connections\"\n",
+    "                \"model_text\":\"Track network connections\"\n",
     "            }\n",
     "        }\n",
     "    }\n",
