added next steps heading

--- a/notebooks/search/03-ELSER.ipynb
+++ b/notebooks/search/03-ELSER.ipynb
@@ -509,6 +509,14 @@
     "    plot = hit['_source']['plot']\n",
     "    print(f\"Score: {score}\\nTitle: {title}\\nPlot: {plot}\\n\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Next Steps\n",
+    "Now that we have a working example of semantic search using ELSER, you can try it out on your own data. Don't forget to scale down the ML node when you are done. "
+   ]
   }
  ],
  "metadata": {
