--- a/notebooks/search/03-ELSER.ipynb
+++ b/notebooks/search/03-ELSER.ipynb
@@ -19,73 +19,10 @@
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {
-    "id": "Y01AXpELkygt"
-   },
-   "source": [
-    "# 🧰 Requirements\n",
-    "\n",
-    "For this example, you will need:\n",
-    "\n",
-    "- An Elastic deployment with minimum **4GB machine learning node**\n",
-    "   - We'll be using [Elastic Cloud](https://www.elastic.co/guide/en/cloud/current/ec-getting-started.html) for this example (available with a [free trial](   https://cloud.elastic.co/registration?utm_source=github&utm_content=elasticsearch-labs-notebook))\n",
-    "\n",
-    "   \n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "N4pI1-eIvWrI"
-   },
-   "source": [
-    "# Create Elastic Cloud deployment\n",
-    "\n",
-    "If you don't have an Elastic Cloud deployment, sign up [here](https://cloud.elastic.co/registration?utm_source=github&utm_content=elasticsearch-labs-notebook) for a free trial.\n",
-    "\n",
-    "- Go to the [Create deployment](https://cloud.elastic.co/deployments/create) page\n",
-    "   - Under **Advanced settings**, go to **Machine Learning instances**\n",
-    "   - You'll need at least **4GB** RAM per zone for this tutorial\n",
-    "   - Select **Create deployment**"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "nSw1R8e28F_E"
-   },
-   "source": [
-    "# Setup ELSER\n",
-    "To use ELSER, you must have the [appropriate subscription]() level\n",
-    "for semantic search or the trial period activated.\n",
-    "\n",
-    "Follow these [instructions](https://www.elastic.co/guide/en/machine-learning/8.8/ml-nlp-elser.html#trained-model) to download and deploy ELSER in the Kibana UI or using the Dev Tools **Console**.\n",
-    "\n",
-    "(Console commands in comments 👇)\n",
-    "<!-- # download elser model\n",
-    "\n",
-    "```json\n",
-    "PUT _ml/trained_models/.elser_model_1\n",
-    "{\n",
-    "  \"input\": {\n",
-    "\t\"field_names\": [\"text_field\"]\n",
-    "  }\n",
-    "}\n",
-    "``` -->\n",
-    "<!-- # deploy model\n",
-    "```json\n",
-    "POST _ml/trained_models/.elser_model_1/deployment/_start?deployment_id=for_search -->"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
     "id": "gaTFHLJC-Mgi"
    },
    "source": [
-    "# Install packages and connect with Elasticsearch Client\n",
+    "# Install and Connect\n",
     "\n",
     "To get started, we'll need to connect to our Elastic deployment using the Python client.\n",
     "Because we're using an Elastic Cloud deployment, we'll use the **Cloud ID** to identify our deployment.\n",
@@ -107,7 +44,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install elasticsearch"
+    "!pip install -qU elasticsearch"
    ]
   },
   {
@@ -123,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "id": "uP_GTVRi-d96"
    },
@@ -150,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -185,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -193,7 +130,15 @@
     "id": "rdiUKqZbEKfF",
     "outputId": "43b6f1cd-a43e-4dbe-caa5-7fd170464881"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'instance-0000000000', 'cluster_name': '96f39514682c4f9a8dcdf46927f22675', 'cluster_uuid': 'jFtkpt2CSYyfYgxa_G4bTA', 'version': {'number': '8.10.3', 'build_flavor': 'default', 'build_type': 'docker', 'build_hash': 'c63272efed16b5a1c25f3ce500715b7fddf9a9fb', 'build_date': '2023-10-05T10:15:55.152563867Z', 'build_snapshot': False, 'lucene_version': '9.7.0', 'minimum_wire_compatibility_version': '7.17.0', 'minimum_index_compatibility_version': '7.0.0'}, 'tagline': 'You Know, for Search'}\n"
+     ]
+    }
+   ],
    "source": [
     "print(client.info())"
    ]
@@ -211,6 +156,88 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Download and Deploy ELSER Model\n",
+    "In this example, we are going to download and deploy the ELSER model in our ML node. Make sure you have an ML node in order to run the ELSER model. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creates the ELSER model configuration. Automatically downloads the model if it doesn't exist.\n",
+    "client.ml.put_trained_model(\n",
+    "  model_id=\".elser_model_1\",\n",
+    "  input={\n",
+    "    \"field_names\": [\"text_field\"]\n",
+    "  }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The above command will download the ELSER model. This will take a few minutes to complete. Use the following command to check the status of the model download."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ELSER Model is downloaded and ready to be deployed.\n"
+     ]
+    }
+   ],
+   "source": [
+    "status = client.ml.get_trained_models(\n",
+    "  model_id=\".elser_model_1\",\n",
+    "  include=\"definition_status\"\n",
+    ")\n",
+    "\n",
+    "if (status[\"trained_model_configs\"][0][\"fully_defined\"]):\n",
+    "  print(\"ELSER Model is downloaded and ready to be deployed.\")\n",
+    "else:\n",
+    "  print(\"ELSER Model is downloaded but not ready to be deployed.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once the model is downloaded, we can deploy the model in our ML node. Use the following command to deploy the model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Start trained model deployment\n",
+    "client.ml.start_trained_model_deployment(\n",
+    "  model_id=\".elser_model_1\",\n",
+    "  number_of_allocations=1,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This also will take a few minutes to complete."
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {
@@ -225,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -233,9 +260,19 @@
     "id": "XhRng99KLQsd",
     "outputId": "00ea73b5-45a4-472b-f4bc-2c2c790ab94d"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ObjectApiResponse({'acknowledged': True})"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n",
     "client.ingest.put_pipeline(\n",
     "    id=\"elser-ingest-pipeline\", \n",
     "    description=\"Ingest pipeline for ELSER\",\n",
@@ -281,7 +318,7 @@
     "id": "TF_wxIAhD07a"
    },
    "source": [
-    "## Create index with mappings\n",
+    "## Create index\n",
     "\n",
     "To use the ELSER model at index time, we'll need to create an index mapping that supports a [`text_expansion`](https://www.elastic.co/guide/en/elasticsearch/reference/current/query-dsl-text-expansion-query.html) query.\n",
     "The mapping must include a field of type [`rank_features`](https://www.elastic.co/guide/en/elasticsearch/reference/current/rank-features.html) to work with our feature vectors of interest.\n",
@@ -292,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -300,7 +337,18 @@
     "id": "cvYECABJJs_2",
     "outputId": "18fb51e4-c4f6-4d1b-cb2d-bc6f8ec1aa84"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ObjectApiResponse({'acknowledged': True, 'shards_acknowledged': True, 'index': 'elser-example-movies'})"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "client.indices.create(\n",
     "  index=\"elser-example-movies\",\n",
@@ -322,9 +370,9 @@
     "          }\n",
     "        }\n",
     "      },\n",
-    "      \"ml.tokens\": {\n",
-    "        \"type\": \"rank_features\"\n",
-    "      },\n",
+    "      \"ml.tokens\": { \n",
+    "        \"type\": \"rank_features\" \n",
+    "      }\n",
     "    }\n",
     "  }\n",
     ")"
@@ -338,12 +386,14 @@
    },
    "source": [
     "## Insert Documents\n",
-    "Let's insert our example dataset of 12 movies."
+    "Let's insert our example dataset of 12 movies.\n",
+    "\n",
+    "If you get an error, check the model has been deployed and is available in the ML node. In newer versions of Elastic Cloud, ML node is autoscaled and the ML node may not be ready yet. Wait for a few minutes and try again."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -351,7 +401,15 @@
     "id": "IBfqgdAcuKRG",
     "outputId": "3b86daa1-ade1-4ff3-da81-4207fa814d30"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done indexing documents into `search-movies` index!\n"
+     ]
+    }
+   ],
    "source": [
     "url = \"https://raw.githubusercontent.com/elastic/elasticsearch-labs/main/notebooks/search/movies.json\"\n",
     "response = urlopen(url)\n",
@@ -395,14 +453,14 @@
     "id": "Zy5GT2xb38oz"
    },
    "source": [
-    "# Querying Documents with ELSER\n",
+    "# Searching Documents\n",
     "\n",
     "Let's test out semantic search using ELSER."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -410,7 +468,26 @@
     "id": "bAZRxja-5Q6X",
     "outputId": "37a26a2c-4284-4e51-c34e-9a55edf77cb8"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Score: 7.934606\n",
+      "Title: Fight Club\n",
+      "Plot: An insomniac office worker and a devil-may-care soapmaker form an underground fight club that evolves into something much, much more.\n",
+      "\n",
+      "Score: 6.172357\n",
+      "Title: Pulp Fiction\n",
+      "Plot: The lives of two mob hitmen, a boxer, a gangster and his wife, and a pair of diner bandits intertwine in four tales of violence and redemption.\n",
+      "\n",
+      "Score: 4.646809\n",
+      "Title: Se7en\n",
+      "Plot: Two detectives, a rookie and a veteran, hunt a serial killer who uses the seven deadly sins as his motives.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "response = client.search(\n",
     "    index='elser-example-movies', \n",
@@ -419,7 +496,7 @@
     "        \"text_expansion\": {\n",
     "            \"ml.tokens\": {\n",
     "                \"model_id\":\".elser_model_1\",\n",
-    "                \"model_text\":\"child toy\"\n",
+    "                \"model_text\":\"fighting movie\"\n",
     "            }\n",
     "        }\n",
     "    }\n",
@@ -431,6 +508,14 @@
     "    title = hit['_source']['title']\n",
     "    plot = hit['_source']['plot']\n",
     "    print(f\"Score: {score}\\nTitle: {title}\\nPlot: {plot}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Next Steps\n",
+    "Now that we have a working example of semantic search using ELSER, you can try it out on your own data. Don't forget to scale down the ML node when you are done. "
    ]
   }
  ],
@@ -453,7 +538,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.3"
   },
   "vscode": {
    "interpreter": {
