--- a/notebooks/search/02-hybrid-search.ipynb
+++ b/notebooks/search/02-hybrid-search.ipynb
@@ -147,7 +147,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': 'instance-0000000001', 'cluster_name': 'ad402eb9a59041458b8edfc021e91caf', 'cluster_uuid': 'ks_HfcCdSf2qrcKZQsk9Lg', 'version': {'number': '8.10.2', 'build_flavor': 'default', 'build_type': 'docker', 'build_hash': '6d20dd8ce62365be9b1aca96427de4622e970e9e', 'build_date': '2023-09-19T08:16:24.564900370Z', 'build_snapshot': False, 'lucene_version': '9.7.0', 'minimum_wire_compatibility_version': '7.17.0', 'minimum_index_compatibility_version': '7.0.0'}, 'tagline': 'You Know, for Search'}\n"
+      "{'name': 'instance-0000000000', 'cluster_name': 'ad402eb9a59041458b8edfc021e91caf', 'cluster_uuid': 'ks_HfcCdSf2qrcKZQsk9Lg', 'version': {'number': '8.10.2', 'build_flavor': 'default', 'build_type': 'docker', 'build_hash': '6d20dd8ce62365be9b1aca96427de4622e970e9e', 'build_date': '2023-09-19T08:16:24.564900370Z', 'build_snapshot': False, 'lucene_version': '9.7.0', 'minimum_wire_compatibility_version': '7.17.0', 'minimum_index_compatibility_version': '7.0.0'}, 'tagline': 'You Know, for Search'}\n"
      ]
     }
    ],
@@ -208,13 +208,15 @@
    "source": [
     "# Querying Documents with Hybrid Search\n",
     "\n",
+    "🔐 NOTE: Before you can run the query in this section, you need the `book_index` dataset from our [quick start](https://github.com/elastic/elasticsearch-labs/blob/main/notebooks/search/00-quick-start.ipynb). If you haven't worked through the quick start, please follow the steps described there to create an Elasticsearch deployment with the dataset in it, and then come back to run the query here.\n",
+    "\n",
     "Now we need to perform a query using two different search strategies:\n",
     "- Semantic search using the \"all-MiniLM-L6-v2\" embedding model\n",
     "- Keyword search using the \"title\" field\n",
     "\n",
     "We then use [Reciprocal Rank Fusion (RRF)](https://www.elastic.co/guide/en/elasticsearch/reference/current/rrf.html) to balance the scores to provide a final list of documents, ranked in order of relevance. RRF is a ranking algorithm for combining results from different information retrieval strategies.\n",
     "\n",
-    "**NOTE** Note that _score is null, and we instead use _rank to show our top-ranked documents."
+    "Note that _score is null, and we instead use _rank to show our top-ranked documents."
    ]
   },
   {
@@ -227,31 +229,31 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "ID: F3qHI4sB941uqz8zfa_0\n",
+      "ID: vHqSKIsB941uqz8zHq-G\n",
       "Publication date: 2019-05-03\n",
       "Title: Python Crash Course\n",
       "Summary: A fast-paced, no-nonsense guide to programming in Python\n",
       "Rank: 1\n",
       "\n",
-      "ID: FnqHI4sB941uqz8zfa_0\n",
+      "ID: u3qSKIsB941uqz8zHq-G\n",
       "Publication date: 2019-10-29\n",
       "Title: The Pragmatic Programmer: Your Journey to Mastery\n",
       "Summary: A guide to pragmatic programming for software engineers and developers\n",
       "Rank: 2\n",
       "\n",
-      "ID: G3qHI4sB941uqz8zfa_0\n",
+      "ID: wHqSKIsB941uqz8zHq-G\n",
       "Publication date: 2018-12-04\n",
       "Title: Eloquent JavaScript\n",
       "Summary: A modern introduction to programming\n",
       "Rank: 3\n",
       "\n",
-      "ID: GnqHI4sB941uqz8zfa_0\n",
+      "ID: v3qSKIsB941uqz8zHq-G\n",
       "Publication date: 2015-03-27\n",
       "Title: You Don't Know JS: Up & Going\n",
       "Summary: Introduction to JavaScript and programming as a whole\n",
       "Rank: 4\n",
       "\n",
-      "ID: H3qHI4sB941uqz8zfa_0\n",
+      "ID: xHqSKIsB941uqz8zHq-G\n",
       "Publication date: 2012-06-27\n",
       "Title: Introduction to the Theory of Computation\n",
       "Summary: Introduction to the theory of computation and complexity theory\n",
@@ -280,13 +282,6 @@
     ")\n",
     "\n",
     "pretty_response(response)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "🔐 NOTE: this query is based on the `book_index` dataset from our [quick start](https://github.com/elastic/elasticsearch-labs/blob/main/notebooks/search/00-quick-start.ipynb). If you haven't worked through it, please follow the steps described there to create an Elasticsearch deployment with this dataset in it, and then come back to run the query here."
    ]
   }
  ],
