--- a/notebooks/search/04-multilingual.ipynb
+++ b/notebooks/search/04-multilingual.ipynb
@@ -36,7 +36,7 @@
     "For this example, you will need:\n",
     "\n",
     "- Python 3.6 or later\n",
-    "- An Elastic deployment with minimum **4GB machine learning node**\n",
+    "- An Elastic deployment with a machine learning node\n",
     "   - We'll be using [Elastic Cloud](https://www.elastic.co/guide/en/cloud/current/ec-getting-started.html) for this example (available with a [free trial](https://cloud.elastic.co/registration?utm_source=github&utm_content=elasticsearch-labs-notebook))\n",
     "- The [Elastic Python client](https://www.elastic.co/guide/en/elasticsearch/client/python-api/current/installation.html)\n"
    ]
@@ -52,10 +52,7 @@
     "\n",
     "If you don't have an Elastic Cloud deployment, sign up [here](https://cloud.elastic.co/registration?utm_source=github&utm_content=elasticsearch-labs-notebook) for a free trial.\n",
     "\n",
-    "- Go to the [Create deployment](https://cloud.elastic.co/deployments/create) page\n",
-    "   - Under **Advanced settings**, go to **Machine Learning instances**\n",
-    "   - You'll need at least **4GB** RAM per zone for this tutorial\n",
-    "   - Select **Create deployment**"
+    "Once logged in to your Elastic Cloud account, go to the [Create deployment](https://cloud.elastic.co/deployments/create) page and select **Create deployment**. Leave all settings with their default values."
    ]
   },
   {
