--- a/notebooks/search/05-query-rules.ipynb
+++ b/notebooks/search/05-query-rules.ipynb
@@ -26,8 +26,7 @@
     "\n",
     "If you don't have an Elastic Cloud deployment, sign up [here](https://cloud.elastic.co/registration?utm_source=github&utm_content=elasticsearch-labs-notebook) for a free trial.\n",
     "\n",
-    "- Go to the [Create deployment](https://cloud.elastic.co/deployments/create) page\n",
-    "   - Select **Create deployment** and create a deployment with Elasticsearch **8.10.0** or newer"
+    "Once logged in to your Elastic Cloud account, go to the [Create deployment](https://cloud.elastic.co/deployments/create) page and select **Create deployment**. Make sure the Elasticsearch version is **8.10.0** or newer. Leave all other settings with their default values."
    ]
   },
   {
