--- a/notebooks/search/03-ELSER.ipynb
+++ b/notebooks/search/03-ELSER.ipynb
@@ -324,7 +324,7 @@
     "The mapping must include a field of type [`rank_features`](https://www.elastic.co/guide/en/elasticsearch/reference/current/rank-features.html) to work with our feature vectors of interest.\n",
     "This field contains the token-weight pairs the ELSER model created based on the input text.\n",
     "\n",
-    "Let's create an index named `elser-movies` with the mappings we need.\n"
+    "Let's create an index named `elser-example-movies` with the mappings we need.\n"
    ]
   },
   {
