use keyword filtering

--- a/notebooks/search/00-quick-start.ipynb
+++ b/notebooks/search/00-quick-start.ipynb
@@ -524,7 +524,7 @@
     "\n",
     "This is an example of adding a keyword filter to the query.\n",
     "\n",
-    "The example retrieves the top books that are similar to \"javascript books\" based on their title vectors, and also have the word \"addison\" in the publisher's name."
+    "The example retrieves the top books that are similar to \"javascript books\" based on their title vectors, and also Addison-Wesley as publisher."
    ]
   },
   {
@@ -570,7 +570,7 @@
     "      \"num_candidates\": 100,\n",
     "      \"filter\": {\n",
     "          \"term\": {\n",
-    "              \"publisher\": \"addison\"\n",
+    "              \"publisher.keyword\": \"addison-wesley\"\n",
     "          }\n",
     "      }\n",
     "    }\n",
